Added How to Listen Section to about us page

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -52,6 +52,44 @@
     </div>
   </div>
 </div>
+<div class="container-fluid container-padded bg-third">
+  <div class="container container-padded">
+    <h1>How To Listen?</h1>
+    <p>There are many ways you can listen to URY, whether you’re a Uni of York student, friends and family of our presenters, or you’re just interested in what our student radio has to offer.</p>
+    <div class="row">
+      <div class="col-md-6 col-lg-4">
+        <h3>On Air</h3>
+          <h5>AM Radio</h5>
+          <p>We are of course a legal radio station and we broadcast on AM radio all across campus on 1350KHz Medium Wave.</p>
+          <p>So what are you waiting for? Ask your parents if you can have their old boom box, and get it tuned into URY like it’s 1989.</p>
+          <h5>In Your Ears</h5>
+          <p>URY can occasionally be heard out and about on campus, we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night! If you hear us… come along and say hi!</p>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <h3>Online</h3>
+        <p>Left your boom box at home? Don’t worry we are online too.</p>
+          <h5>URY Website</h5>
+          <p>You can listen to us live through <a href="//ury.org.uk/live">radioplayer</a> (recommended), or via one of our streams:</p>
+          <ul>
+            <li><a target="_blank" href="//ury.org.uk/audio/live-high">High Quality (192 kb/s MPEG)</a></li>
+            <li><a target="_blank" href="//ury.org.uk/audio/live-high-ogg">High Quality OGG (128 kb/s OGG)</a></li>
+            <li><a target="_blank" href="//ury.org.uk/audio/live-mobile">Mobile Quality (48 kb/s MPEG)</a></li>
+          </ul>
+          <h5>Alexa</h5>
+          <p>We are also on TuneIn which means you can listen to us via any Alexa devices, simply say “Alexa… Play University Radio York”.</p>
+          <h5>iTunes Internet Radio</h5>
+          <p>We are available on iTunes Radio: <br>Internet Radio -> College/University -> ((URY)) - University Radio York</p>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <h3>On Tap</h3>
+        <p>URY On Tap - Refreshing content when you need it the most.</p>
+        <p>At URY we understand that you have very busy lives and can’t always tune into your favourite show live, that’s why the majority of our shows are automatically uploaded to Mixcloud, simply find the show on our schedule and listen back. <a href="{{url "/schedule/thisweek"}}">Our schedule.</a></p>
+        <p>Believe it or not but radio is also a visual medium, check out our YouTube content to see all of our latest sessions and interviews. <a href="{{url "/ontap#YouTube"}}">Our YouTube content.</a></p>
+        <p>If all of that wasn’t enough for you, we still produce the occasional podcast too! <a href="{{url "/podcasts"}}">View all podcasts!</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container-fluid container-padded">
   <div class="container container-padded">
     <h1>Our History</h1>
