--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -48,7 +48,7 @@
 <div id="index-videos" class="container-fluid container-padded bg-secondary">
   <div class="row">
     <div class="col-12 col-md-8">
-      <h2>{{.PageContext.ShortName}} on Youtube</h2>
+      <a name="YouTube"></a><h2>{{.PageContext.ShortName}} on Youtube</h2>
     </div>
   </div>
   <div id="youtube-videos" class="row pb-3 youtube-grid">
