--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -69,11 +69,11 @@
         <h3>Online</h3>
         <p>Left your boom box at home? Don’t worry we are online too.</p>
           <h5>URY Website</h5>
-          <p>You can listen to us live through <a href="//ury.org.uk/live">radioplayer</a> (recommended), or via one of our streams:</p>
+          <p>You can listen to us live through <a target="_blank" href="//ury.org.uk/live" title="Click to listen live.">radioplayer</a> (recommended), or via one of our streams:</p>
           <ul>
-            <li><a target="_blank" href="//ury.org.uk/audio/live-high">High Quality (192 kb/s MPEG)</a></li>
-            <li><a target="_blank" href="//ury.org.uk/audio/live-high-ogg">High Quality OGG (128 kb/s OGG)</a></li>
-            <li><a target="_blank" href="//ury.org.uk/audio/live-mobile">Mobile Quality (48 kb/s MPEG)</a></li>
+            <li><a target="_blank" href="//ury.org.uk/audio/live-high" title="Listen to URY's High Quality stream (192kb/s).">High Quality (192 kb/s MPEG)</a></li>
+            <li><a target="_blank" href="//ury.org.uk/audio/live-high-ogg" title="Listen to URY's High Quality (OGG) stream (128kb/s).">High Quality OGG (128 kb/s OGG)</a></li>
+            <li><a target="_blank" href="//ury.org.uk/audio/live-mobile" title="Listen to URY's Mobile Quality stream (48kb/s).">Mobile Quality (48 kb/s MPEG)</a></li>
           </ul>
           <h5>Alexa</h5>
           <p>We are also on TuneIn which means you can listen to us via any Alexa devices, simply say “Alexa… Play University Radio York”.</p>
@@ -83,9 +83,9 @@
       <div class="col-md-6 col-lg-4">
         <h3>On Tap</h3>
         <p>URY On Tap - Refreshing content when you need it the most.</p>
-        <p>At URY we understand that you have very busy lives and can’t always tune into your favourite show live, that’s why the majority of our shows are automatically uploaded to Mixcloud, simply find the show on our schedule and listen back. <a href="{{url "/schedule/thisweek"}}">Our schedule.</a></p>
-        <p>Believe it or not but radio is also a visual medium, check out our YouTube content to see all of our latest sessions and interviews. <a href="{{url "/ontap#YouTube"}}">Our YouTube content.</a></p>
-        <p>If all of that wasn’t enough for you, we still produce the occasional podcast too! <a href="{{url "/podcasts"}}">View all podcasts!</a></p>
+        <p>At URY we understand that you have very busy lives and can’t always tune into your favourite show live, that’s why the majority of our shows are automatically uploaded to Mixcloud, simply find the show on our schedule and listen back. <a href="{{url "/schedule/thisweek"}}" title="Click to view our schedule.">Our schedule.</a></p>
+        <p>Believe it or not but radio is also a visual medium, check out our YouTube content to see all of our latest sessions and interviews. <a href="{{url "/ontap#YouTube"}}" title="click to view our youtube content.">Our YouTube content.</a></p>
+        <p>If all of that wasn’t enough for you, we still produce the occasional podcast too! <a href="{{url "/podcasts"}}" title="Click to find all of our podcasts.">View all podcasts!</a></p>
       </div>
     </div>
   </div>
