--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -11,13 +11,13 @@
     </div>
     <div class="container-fluid container-padded text-center">
       <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 align-self-center">
             <a href="//twitter.com/{{.PageContext.MainTwitter}}"><i class="fab fa-twitter fa-2x"></i><h3>Find us on Twitter</h3></a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 align-self-center">
             <h3>Join in with the conversation<br>#CIN19</h3>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 align-self-center">
             <a href="//facebook.com/{{.PageContext.MainFacebook}}"><i class="fab fa-facebook fa-2x"></i><h3>Find us on Facebook</h3></a>
           </div>
       </div>
