--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -25,19 +25,15 @@
 </div>
 <div class="container-fluid container-padded text-center">
   <div class="row">
-    <div class="col-md-4">
-      <h2><a href="//twitter.com/{{.PageContext.MainTwitter}}" title="URY Twitter" target="_blank">@{{.PageContext.MainTwitter}}</a></h2>
-      <span>On Twitter</span>
+    <div class="col-md-4 align-self-center">
+      <a href="//twitter.com/{{.PageContext.MainTwitter}}"><i class="fab fa-twitter fa-2x"></i><h3>Find us on Twitter</h3></a>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 align-self-center">
       <h2>07851 101 313</h2>
       <span>Text the studio<br>or send a message via the <a href="/" title="URY Homepage">homepage</a>.</span>
     </div>
-    <div class="col-md-4">
-      <h2>
-        <a href="//facebook.com/{{.PageContext.MainFacebook}}" title="URY Facebook Page" target="_blank">/{{.PageContext.MainFacebook}}</a>
-      </h2>
-      <span>On Facebook</span>
+    <div class="col-md-4 align-self-center">
+      <a href="//facebook.com/{{.PageContext.MainFacebook}}"><i class="fab fa-facebook fa-2x"></i><h3>Find us on Facebook</h3></a>
     </div>
   </div>
 </div>
