Fix some nested double-quotes messing up formatting

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -7,8 +7,8 @@
 <meta property="og:locale" content="en_GB">
 <meta property="og:title" content="{{.PageContext.LongName}} | About Us">
 <meta property="og:description" content="{{.PageContext.SiteDescription}}">
-<meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}">
-<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/about/"}}">
+<meta property="og:image" content='{{.PageContext.FullURL}}{{url "/images/open_graph-general.jpg"}}'>
+<meta property="og:url" content='{{.PageContext.FullURL}}{{url "/about/"}}'>
 {{end}}
 {{define "content"}}
 <div class="container-fluid banner-2">
