--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -7,8 +7,8 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Want to help York make incredible award winning radio?">
 <meta property="og:description" content="Want to join one of the best, largest and most diverse societies university has to offer? Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen, play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.">
-<meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-get_involved.jpg"}}">
-<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/getinvolved"}}">
+<meta property="og:image" content='{{.PageContext.FullURL}}{{url "/images/open_graph-get_involved.jpg"}}'>
+<meta property="og:url" content='{{.PageContext.FullURL}}{{url "/getinvolved"}}'>
 {{end}}
 
 {{define "content"}}
@@ -47,7 +47,7 @@
       <p>- If you’re keen to develop your <a href="{{url "/teams/marketing/"}}" title="Have a look at what the marketing team does!">marketing skills</a>, we have social media accounts with thousands of followers and a national award nominated brand</p>
       <p>- If you want to try out web design or <a href="{{url "/teams/computing/"}}" title="Have a look at what the computing team does!">software engineering</a>, our website and backpages are designed and run in house</p>
       <p>- Plus, if you want to <a href="{{url "/teams/news/"}}" title="Have a look at what the news and sport team does!">commentate on sport, learn to news read</a>, chat about <a href="{{url "/teams/music/"}}" title="Have a look at what the music team does!">music</a>, or wax lyrical about <a href="{{url "/teams/speech/"}}" title="Have a look at what the speech team does!">theatre, culture and the arts</a>, there’s content teams for you too!</p>
-  
+
   </div>
 </div>
 <div class="container-fluid container-padded  bg-secondary">
@@ -63,7 +63,7 @@
           <dt>Join Our Slack Team</dt>
           <dd>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</dd>
         </dl>
-        <p>You can also come and <a href="{{url "/contact#map"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
+        <p>You can also come and <a href='{{url "/contact#map"}}' title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
       </div>
   </div>
 </div>
@@ -73,7 +73,7 @@
       <div> {{/* Prevents bug where p would appear inline with h2 */}}
         <p>Getting your own show or podcast is really easy! Just take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>, if you can see a gap, there's no reason you couldn't fill it!</p>
         <p>Once you have completed the steps above, you will be able to sign up to training! In <a href="//ury.org.uk/myradio">MyRadio</a> head to the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
-        <p>During training, we will show you how to use the studio and how to apply for a show or podcast. If you want to brainstorm ideas with our team, then head to <a href="{{url "/teams/production/"}}" title="Have a look at what the production team does!">Production</a> Meeting, which is at 8pm every Monday in V/N/123a!</p>
+        <p>During training, we will show you how to use the studio and how to apply for a show or podcast. If you want to brainstorm ideas with our team, then head to <a href='{{url "/teams/production/"}}' title="Have a look at what the production team does!">Production</a> Meeting, which is at 8pm every Monday in V/N/123a!</p>
     </div>
     </div>
 </div>
