--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -68,7 +68,7 @@
       </div>
     {{end}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card podcast link" href="{{url "/podcasts/"}}">
+      <a class="ury-card podcast link" href='{{url "/podcasts/"}}'>
         <div class="ury-card-body">
           <div class="ury-card-lg-title">See all podcasts...</div>
         </div>
